cabal-version:      3.0
name:               crawl-yamareco
version:            0.1.0.0
synopsis:           Crawl yamareco's web site and get some data

-- A longer description of the package.
-- description:
homepage:           https://github.com/bsh-git/yamalist

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Hiroyuki Bessho
maintainer:         bsh@grotto.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable crawl-yamareco
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        either ^>=5.0.0,
        process ^>=1.6.0.0,
        temporary ^>=1.3,
        extra ^>=1.7.0,
        bytestring ^>= 0.12.0.0,
        text-icu ^>= 0.8.0,
        text ^>= 2.1.0,
        html-parse ^>= 0.2.1.0,
        containers ^>= 0.6.5.0,
        regex-tdfa ^>=1.3.2.0,
        base ^>=4.15.1.0

    hs-source-dirs:   app
    default-language: Haskell2010
